syntax = "proto3";

package media;

service MediaService {
  rpc UploadMedia(UploadMediaRequest) returns (UploadMediaResponse);
  rpc UpdateMedia(UpdateMediaRequest) returns (UpdateMediaResponse);
}

message UploadMediaRequest {
  bytes file = 1;
  string fileName = 2;
  string fileType = 3;
  string fileSize = 4;
}

message UploadMediaResponse {
  string media_id = 1;
}

message UpdateMediaRequest {
  string media_id = 1;
  bytes file = 2;
  string fileName = 3;
  string fileType = 4;
  string fileSize = 5;
}

message UpdateMediaResponse {
  string newMediaId = 1;
}
